--- a/ent/templates/general/viewerhooks.go.tmpl
+++ b/ent/templates/general/viewerhooks.go.tmpl
@@ -84,12 +84,12 @@ func SetUserHook() func(next ent.Mutator) ent.Mutator {
 	}
 }
 
-type MutationWithCreator interface {
-	CreatorID() (r pulid.ID, exits bool)
-	SetCreatorID(id pulid.ID)
+type MutationWithCreatedBy interface {
+	CreatedByID() (r pulid.ID, exits bool)
+	SetCreatedByID(id pulid.ID)
 }
 
-func SetCreatorHook() func(next ent.Mutator) ent.Mutator {
+func SetCreatedByHook() func(next ent.Mutator) ent.Mutator {
 	return func(next ent.Mutator) ent.Mutator {
 		return ent.MutateFunc(func(ctx context.Context, m ent.Mutation) (ent.Value, error) {
 			vc := viewer.FromContext(ctx)
@@ -97,13 +97,13 @@ func SetCreatorHook() func(next ent.Mutator) ent.Mutator {
 				return nil, fmt.Errorf("viewer has no identity")
 			}
 
-			tm, ok := m.(MutationWithCreator)
+			tm, ok := m.(MutationWithCreatedBy)
 			if !ok {
 				return nil, fmt.Errorf("unexpected mutation type %T", m)
 			}
 
-			if _, ok := tm.CreatorID(); !ok {
-				tm.SetCreatorID(vc.ID)
+			if _, ok := tm.CreatedByID(); !ok {
+				tm.SetCreatedByID(vc.ID)
 			}
 			return next.Mutate(ctx, m)
 		})
